--- a/index.html
+++ b/index.html
@@ -4,13 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
+     link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lilita+One&family=Poller+One&display=swap" rel="stylesheet">
     <title>Pontos Turisticos de JB</title>
 </head>
 <header>  
     <h1> Pontos turisticos de Jaboatão dos Guararapes </h1>
     <h2> Você não pode deixar de visitar</h2>
     <h3> <img src="./jaboatao-dos-guararapes-pernambuco-9d5c_1400x540.jpg" /> </h3>
-    <h4> vamos começar ?  </h4>
+
+    <div> 
+        <a href="index2.html"> <P style="color: rgb(255, 255, 255);"> Ir para os Lugares que eu Gosto de Frequentar </P>
+        </a>
+    </div>
 </header>
 <body>
    
